@@ -17,6 +17,11 @@ This section tracks upcoming changes that are not yet released.
 
 * Badges to Antora documentation.
 
+=== Fixed
+
+* Run CI actions on version branches.
+* Run Molecule tests on scheduled executions.
+
 == {v1_0_0}
 
 === Added
